fix: disable drag-start event on contenteditable container and lock text-selection inside A4 sheet to prevent off-page collapse/unselect issues

--- a/src/styles/ResumeBuilder.css
+++ b/src/styles/ResumeBuilder.css
@@ -1039,6 +1039,10 @@ h2.rb-step-title {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .rb-preview-a4-sheet {
@@ -1047,6 +1051,10 @@ h2.rb-step-title {
 
 .rb-preview-content-injected {
   text-align: left;
+  -webkit-user-select: text !important;
+  -moz-user-select: text !important;
+  -ms-user-select: text !important;
+  user-select: text !important;
 }
 
 
